--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.17",
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.24",
@@ -18,7 +19,9 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^10.0.0",
+    "react-phone-number-input": "^3.4.14",
     "react-router-dom": "^7.9.6",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
